argo-demo/4-canary_demo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-demo
  namespace: test
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-demo
