argo-demo/7-virtual_service_canary_demo_no_flagger.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: canary-demo
  namespace: test
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
  - "*" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            host: canary-demo.test.svc.cluster.local
